Add thumbnail and change memory size
